<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.bmicalculator.MainActivity"
    android:weightSum="1">

    <TextView
        android:text="@string/bmi_Output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bmi_Output"
        android:layout_weight="0.18"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_above="@+id/weight_Status_Output"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="26dp" />

    <TextView
        android:text="@string/weigth_Status_Output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weight_Status_Output"
        android:layout_weight="0.21"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/inchesHeightInput"
        android:ems="10"
        android:id="@+id/inchesHeight"
        android:layout_above="@+id/calculateBMI"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="21dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/feetHeight"
        android:ems="10"
        android:id="@+id/feetHeight"
        android:layout_above="@+id/inchesHeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/height_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_weight="0.08"
        android:gravity="left"
        android:textStyle="bold"
        android:layout_above="@+id/feetHeight"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginBottom="11dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/weightInputText"
        android:ems="10"
        android:id="@+id/weightInput"
        android:layout_above="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <TextView
        android:text="@string/weight_area"
        android:layout_width="341dp"
        android:layout_height="39dp"
        android:id="@+id/textView4"
        android:gravity="left"
        android:textStyle="bold"
        android:layout_above="@+id/weightInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/titleText"
        android:ems="10"
        android:id="@+id/title"
        android:gravity="left"
        android:layout_marginTop="17dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/feet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/feetHeight"
        android:layout_alignBottom="@+id/feetHeight"
        android:layout_alignLeft="@+id/textView13"
        android:layout_alignStart="@+id/textView13" />

    <TextView
        android:text="@string/inches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/inchesHeight"
        android:layout_toRightOf="@+id/inchesHeight"
        android:layout_toEndOf="@+id/inchesHeight" />

    <TextView
        android:text="@string/measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/weightInput"
        android:layout_alignBottom="@+id/weightInput"
        android:layout_toRightOf="@+id/weightInput"
        android:layout_toEndOf="@+id/weightInput" />

    <Button
        android:text="@string/calculate_BMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calculateBMI"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/bmi_Output"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
